Update Kitty config: add splits, resize shortcuts, bottom tab bar, xterm-kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -33,14 +33,38 @@ macos_titlebar_color background
 macos_show_window_title_in none
 macos_option_as_alt yes
 
+# Window layout
+enabled_layouts splits,stack
+
 # Tab bar
-tab_bar_edge top
+tab_bar_edge bottom
+tab_bar_align left
 tab_bar_style powerline
 tab_powerline_style slanted
 
 # Keyboard shortcuts
 # Rename current tab
 map cmd+shift+r set_tab_title
+
+# Window splits
+map ctrl+shift+v launch --location=vsplit --cwd=current
+map ctrl+shift+h launch --location=hsplit --cwd=current
+
+# Navigate between splits
+map ctrl+shift+left neighboring_window left
+map ctrl+shift+right neighboring_window right
+map ctrl+shift+up neighboring_window up
+map ctrl+shift+down neighboring_window down
+
+# Close split
+map ctrl+shift+w close_window
+
+# Resize splits
+map cmd+ctrl+left resize_window narrower
+map cmd+ctrl+right resize_window wider
+map cmd+ctrl+up resize_window taller
+map cmd+ctrl+down resize_window shorter
+map cmd+ctrl+r resize_window reset
 
 # Color themes are automatically loaded from:
 # - dark-theme.auto.conf (when macOS is in dark mode)
