Enable all Kitty window layouts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -34,7 +34,7 @@ macos_show_window_title_in none
 macos_option_as_alt yes
 
 # Window layout
-enabled_layouts splits,stack
+enabled_layouts tall,fat,grid,horizontal,splits,stack,vertical
 
 # Tab bar
 tab_bar_edge bottom
