improved light theme based on jetbrains xcode

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,6 +8,13 @@ italic_font MonoLisa Medium Italic
 bold_italic_font MonoLisa Bold Italic
 font_size 14.0
 
+# Make fonts thicker/bolder
+modify_font cell_width 100%
+modify_font cell_height 110%
+modify_font baseline 2
+# Alternatively, try using SemiBold if you have it:
+# font_family MonoLisa SemiBold
+
 # Font features (OpenType) - Kitty supports these!
 font_features MonoLisa-Medium +ss01 +ss02 +ss07 +ss03 +zero +ss18 +ss16 +ss12
 font_features MonoLisa-Bold +ss01 +ss02 +ss07 +ss03 +zero +ss18 +ss16 +ss12
@@ -46,6 +53,10 @@ tab_powerline_style slanted
 # Rename current tab
 map cmd+shift+r set_tab_title
 
+# New window in current directory
+map cmd+n new_window_with_cwd
+map cmd+enter new_window_with_cwd
+
 # Window splits
 map ctrl+shift+v launch --location=vsplit --cwd=current
 map ctrl+shift+h launch --location=hsplit --cwd=current
@@ -82,6 +93,22 @@ sync_to_monitor yes
 # Mouse
 copy_on_select yes
 strip_trailing_spaces smart
+
+# Smooth scrolling
+touch_scroll_multiplier 2.0
+wheel_scroll_multiplier 5.0
+wheel_scroll_min_lines 1
+
+# Scrollback configuration
+scrollback_lines 10000
+scrollback_pager_history_size 10
+scrollback_fill_enlarged_window yes
+
+# URL/Link handling
+detect_urls yes
+url_style straight
+open_url_with default
+mouse_map cmd+left click ungrabbed mouse_handle_click selection link prompt
 
 # Misc
 enable_audio_bell no
